Fix body overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
   background-attachment: fixed;
   display: flex;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 p {
@@ -239,7 +240,6 @@ a {
   font-weight: 400;
   display: flex;
   justify-content: space-between;
-  max-width: 265px;
 }
 
 .forecast-extra-icon {
